# LocalDrop

./: .gitignore  README.md  cilent.py  host.py  localdrop.py  message.json  pyproject.toml  requirements.txt
localdrop/: __main__.py  cilent.py  sender.py
